--- a/templates/react_template_local.html
+++ b/templates/react_template_local.html
@@ -39,7 +39,7 @@
                 date_joined: "{{ request.user.date_joined|date:"M Y" }}"
             },
             setonline_url: "{% url 'profilesystem:setonline' %}",
-            site_type: "{% ifequal SITE_TYPE 'beta' %}beta{% endifequal %}",
+            site_type: "local",
             last_group: "{{request.session.basicgroup}}"
         };
     </script>
