--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -34,15 +34,44 @@
           .post
               position relative
               margin 10px 20px
-              .content
-                  padding 0 20px
-                  color #9B9B9B
-              .circle
+              &::before
+                  display block
+                  content ''
                   absolute left -7px top 7px
                   height 12px
                   width 12px
                   border-radius 50%
                   background-color #50E3C2
+              &::after
+                  display block
+                  content ''
+                  absolute left -2px top 19px bottom -17px
+                  width 2px
+                  background-color #E9E9E9
+              &:last-child
+                  &:after
+                      display none
+              .header,
+              .content
+                  padding 0 20px
+                  color #9B9B9B
+              .header
+                  margin-bottom 5px
+                  display flex
+                  align-items center
+                  .avatar
+                      width 30px
+                      height 30px
+                      border-radius 50%
+                      background-color #9B9B9B
+                  .info
+                      margin-left 5px
+                      font-size 12px
+                      line-height 1
+                      display flex
+                      flex-direction column
+                      .username
+                          font-weight bold
   .ui-post-editor
        absolute right 5px bottom 5px
       .editor-area
@@ -92,11 +121,8 @@
           .post-btn
               font-size 20px
               border none
-              //border-radius 3px
               background-color transparent
               color #fff
-              // &:hover
-              //     shadow()
               &:focus
                   outline none
           .preview-btn
