--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -112,6 +112,10 @@
                       font-size 20px
                   h3
                       font-size 18px
+                  img
+                      display block
+                      max-width 100%
+                      height auto
               .footer
                   display flex
                   align-items center
@@ -136,20 +140,20 @@
               display block
               animation fadeIn 0.3s
           $shadow_2()
-      .mde-header
-          height 70px
-          padding 5px
-          background-color rgba(#00bcd4, 0.85)
-          border-radius 3px 3px 0 0
-          .mde-header-group
-              margin-top 30px
-             .mde-header-item
-                  button
-                      color #fff
-                      margin 0 10px
-             .mde-dropdown-header-item
-                 button
-                    color #878787
+          .mde-header
+              height 70px
+              padding 5px
+              background-color rgba(#00bcd4, 0.85)
+              border-radius 3px 3px 0 0
+              .mde-header-group
+                  margin-top 30px
+                  .mde-header-item
+                      button
+                          color #fff
+                          margin 0 10px
+                  .mde-dropdown-header-item
+                      button
+                          color #878787
       .mde-text
           textarea
               height 200px
