--- a/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
+++ b/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
@@ -1,7 +1,7 @@
 :local(.container)
 	.nc-header
 		text-align center
-		opacity 0.7
+		color #9B9B9B
 		font-size 16px
 		padding 4px 12px
 	.nc-list
