--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -3,10 +3,17 @@
 :local(.container)
   padding 20px 30px
   margin-bottom 50px
+  +mobile()
+    flex-direction column
+    margin-bottom 0
   .boxes-in-right
     margin-top 40px
     margin-left 20px
     width 300px
+    +mobile()
+        width auto
+        margin-top 20px
+        margin-left 0
 
 :local(.notifications),
 :local(.groupcard)
@@ -15,17 +22,27 @@
   background-color #fff
   border-radius 3px
   transition box-shadow 0.3s ease-in-out
+  +mobile()
+    margin-bottom 20px
   &:hover
     $shadow_2()
 
 :local(.notifications)
   margin-bottom 0
+  min-height 300px
+  +mobile()
+    margin-bottom 20px
+
+:local(.groupcard)
+    min-height 250px
 
 
 :local(.postsection)
    min-height fit-content
   .post-group
       margin 5px
+      +mobile()
+        margin 0
       .date-area
           color #9B9B9B
           font-weight 600
@@ -35,7 +52,7 @@
           shadow()
           .post
               position relative
-              margin 10px 20px
+              margin 10px 30px
               &:before
                   display block
                   content ''
@@ -52,95 +69,142 @@
               &:last-child
                   &:after
                       display none
-              &:nth-child(even)
+              &:nth-child(n)
                   &:before
                       background-color #50E3C2
-              &:nth-child(odd)
+              &:nth-child(2n)
                   &:before
                       background-color #F39C12
-              .header
-                  padding 0 20px
-                  color #9B9B9B
-              .header
-                  margin-bottom 5px
-                  display flex
-                  align-items center
-                  .avatar
-                      width 30px
-                      height 30px
-                      border-radius 50%
-                      background-color #9B9B9B
-                  .info
-                      margin-left 5px
-                      font-size 12px
-                      line-height 1.5
-                      display flex
-                      flex-direction column
-                      .username
-                          font-weight bold
-                  .status
-                      padding 0 10px
-                      background-color color_green500
-                      border-radius 3px
-                      color #fff
-                  .actions
-                      margin-left 10px
-                      i
-                          cursor pointer
-                      .dropdown-menu
-                          top 0
-                          left auto
-                          right 0
-                       &:hover
-                           .dropdown-menu
-                                 display block
-              .content
-                  padding 10px 30px
-                  color #9B9B9B
-                  h1, h2, h3, p
-                      margin 10px 0
-                      color #9B9B9B
-                  h1
-                      font-size 25px
-                      &:first-of-type
-                          position relative
-                          text-align center
-                          &:after
-                              content ''
-                              absolute left 45%
-                              margin-top 5px
-                              width 120px
-                              height 2px
-                              background-color #9b9b9b
-                              display block
-                  h2
-                      font-size 20px
-                  h3
-                      font-size 18px
-                  img
-                      display block
-                      max-width 100%
-                      max-height 200px
-              .footer
-                  display flex
-                  align-items center
-                  margin-top 5px
-                  padding 0 20px
-                  color #9B9B9B
-                  .social-buttons
-                      font-size 18px
-                      i
-                          margin 0 5px
-                  .comment-count
-                      p
-                          margin 0
+              &:nth-child(3n)
+                  &:before
+                      background-color #9AB3EF
+  .post
+      .header
+          padding 0 0 0 20px
+          color #9B9B9B
+          margin-bottom 5px
+          display flex
+          align-items center
+          .avatar
+              width 30px
+              height 30px
+              border-radius 50%
+              background-color #9B9B9B
+          .info
+              margin-left 5px
+              font-size 12px
+              line-height 1.5
+              display flex
+              flex-direction column
+              .username
+                  font-weight bold
+          .status
+              padding 0 10px
+              background-color color_red500
+              border-radius 3px
+              color #fff
+          .actions
+              margin-left 10px
+              i
+                  cursor pointer
+              .dropdown-menu
+                  top 0
+                  left auto
+                  right 10px
+      .content
+          padding 10px 30px
+          color #9B9B9B
+          h1, h2, h3, p
+              margin 10px 0
+              color #9B9B9B
+          h1
+              font-size 25px
+              &:first-of-type
+                  position relative
+                  text-align center
+          h2
+              font-size 20px
+          h3
+              font-size 18px
+          img
+              display block
+              max-width 100%
+              max-height 200px
+          ul, ol
+            padding 0
+            margin 0 15px
+      .footer
+          display flex
+          align-items center
+          margin-top 5px
+          padding 0 0 0 20px
+          color #9B9B9B
+          .social-buttons
+              font-size 18px
+              i
+                  margin 0 5px
+          .comment-count
+              p
+                  margin 0
+  .post-modal
+      .header
+          padding 0
+      .content
+          padding 0
+      .footer
+          padding 0
+          .comment-box
+              flex 1
+              .comment
+                   background-color #F7F7F7
+                   display flex
+                   padding 10px
+                   border-top 1px solid #E9E9E9
+                   .avatar
+                          width 30px
+                          height 30px
+                          border-radius 50%
+                          flex 0 0 auto
+                   .content
+                        flex 1
+                        .text,
+                        .username
+                            margin 0 10px
+                            line-height 1.2
+                        .username
+                            font-weight bold
+                            color #4F4F4F
+                    .status
+                        margin-right 5px
+                        cursor pointer
+                    .comment-input-box
+                       flex 1
+                       margin-left 10px
+                       position relative
+                       .comment-input
+                           width 100%
+                           height 30px
+                           background-color #E9E9E9
+                           padding 0 5px
+                           font-size 12px
+                           box-shadow none
+                           &:focus
+                               outline none
+                               box-shadow none
+                        i
+                            absolute right 5px top 8px
+                            cursor pointer
   .ui-post-editor
        fixed right 385px bottom 65px
+       +mobile()
+          right 40px
       .editor-area
           width 700px
           background-color #fff
           display none
           border-radius 3px
+          +mobile()
+            width 300px
           &.visible
               display block
               animation fadeIn 0.3s
@@ -152,10 +216,14 @@
               border-radius 3px 3px 0 0
               .mde-header-group
                   margin-top 30px
+                  +mobile()
+                    margin-right 0
                   .mde-header-item
                       button
                           color #fff
                           margin 0 10px
+                          +mobile()
+                            margin 0 3px
                   .mde-dropdown-header-item
                       button
                           color #878787
@@ -166,6 +234,7 @@
               border-radius 0
               border none
               box-shadow none
+              background-color #fff
               &:focus
                   box-shadow none
                   outline none
@@ -214,6 +283,8 @@
   overflow hidden
   display flex
   flex-direction column
+  +mobile()
+    display none
   &:hover
     .group-header-image
       transform scale(1.2)
