[FIXED] Mobile post content padding [ADDED] Open link in new window

--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -114,6 +114,8 @@
       .content
           padding 10px 30px
           color #9B9B9B
+          +mobile()
+            padding 0
           h1, h2, h3, p
               margin 10px 0
               color #9B9B9B
