[ADDED] Comment count updates dynamically [REMOVED] Elipssis from main post page [ADDED] Post detail will popup from clicking on anywhere in post [ADDED] Padding for post content in mobile [POSSIBLE FIX] FF overlap issue

--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -115,7 +115,7 @@
           padding 10px 30px
           color #9B9B9B
           +mobile()
-            padding 0
+            padding 10px
           h1, h2, h3, p
               margin 10px 0
               color #9B9B9B
