[TAIGA-611] Left navi not taking focus [TAIGA-619] Subheader UI change for mobile view [TAIGA-621] Remove horizontal scrollbar on posts mobile view [ADDED] Comment time on post

--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -23,7 +23,7 @@
 		position relative
 		width 450px
 		+mobile()
-			width auto
+			width 300px
 		.header-search-input
 			absolute right
 			width 75%
@@ -36,6 +36,8 @@
 			box-shadow none
 			font-size 12px
 			transition width 0.3s ease-in-out
+			+mobile()
+				width 70%
 			&:focus
 				outline none
 				width 100%
@@ -56,6 +58,9 @@
 		box-shadow none
 		&:focus
 			outline none
+		+mobile()
+			width 75px
+			padding 0
 
 	.filter-options
 		background #f9fafc
