--- a/frontend_src/client/pages/Groups/PostPage/PostPage.styl
+++ b/frontend_src/client/pages/Groups/PostPage/PostPage.styl
@@ -116,25 +116,28 @@
           color #9B9B9B
           +mobile()
             padding 10px
-          h1, h2, h3, p
-              margin 10px 0
-              color #9B9B9B
-          h1
-              font-size 25px
-              &:first-of-type
-                  position relative
-                  text-align center
-          h2
-              font-size 20px
-          h3
-              font-size 18px
-          img
-              display block
-              max-width 100%
-              max-height 200px
-          ul, ol
-            padding 0
-            margin 0 15px
+            h1, h2, h3, p
+                margin 10px 0
+                color #9B9B9B
+            h1
+                font-size 25px
+                &:first-of-type
+                    position relative
+                    text-align center
+            h2
+                font-size 20px
+            h3
+                font-size 18px
+            img
+                display block
+                max-width 100%
+                max-height 200px
+            ul, ol
+                padding 0
+                margin 0 15px
+            p
+                a
+                    word-break break-word
       .footer
           display flex
           align-items center
@@ -170,12 +173,16 @@
                    .content
                         flex 1
                         .text,
-                        .username
+                        .username,
+                        .time
                             margin 0 10px
                             line-height 1.2
                         .username
                             font-weight bold
                             color #4F4F4F
+                        .time
+                            margin-top 2px
+                            font-size 10px
                     .status
                         margin-right 5px
                         cursor pointer
