[FIXED] All dependency issue after removing gc

--- a/templates/base.html
+++ b/templates/base.html
@@ -194,7 +194,7 @@
                                             <a href="{% url 'profilesystem:index' %}#reference">{% trans "References" %}</a>
                                         </div>
                                         <div class="col-xs-4 text-center">
-                                            <a href="{% url 'myaccount:index' %}">{% trans "Account" %}</a>
+                                            <a href="#">{% trans "Account" %}</a>
                                         </div>
                                         <div class="col-xs-4 text-center">
                                             <a href="{% url 'landing:index' %}">{% trans "Landing" %}</a>
