--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -114,7 +114,7 @@
                 </div><!-- /.box-body -->
                 <div class="box-footer">
                     <div class="pull-right">
-                        <a href="{% url 'myaccount:index' %}" class="btn btn-sm btn-primary">{% trans "More info" %}</a>
+                        <a href="#" class="btn btn-sm btn-primary">{% trans "More info" %}</a>
                     </div>
                 </div>
             </div><!-- /.box -->
